# paper-assistant

./: README.md  index.html  pyproject.toml
docs/: index.html
src/paper_assistant/: __init__.py  app.py  llm.py  main.py
src/paper_assistant/template_images/通用科技期刊/: template.txt
