[project]
name = "paper-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ning", email = "437186031@qq.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.14.1",
    "structlog>=26.1.0",
]

[project.scripts]
paper-assistant = "paper_assistant:main"

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]
