[project]
name = "paper-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ning", email = "437186031@qq.com" }
]
requires-python = ">=3.11"
dependencies = [
    "google-genai>=2.8.0",
    "pydantic-settings>=2.14.1",
    "structlog>=26.1.0",
    "tiktoken>=0.13.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.6",
    "python-docx>=0.8.12",
    "PyPDF2>=3.0.0",
    "reportlab>=3.6.0",
    "pypandoc>=1.10.0",
]

[project.scripts]
paper-assistant = "paper_assistant:main"
paper_assistant = "paper_assistant:main"

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]
